[bdist_wheel]
universal = 1

[metadata]
name = factory_boy
version = 2.12.1.dev0
description = A versatile test fixtures replacement based on thoughtbot's factory_bot for Ruby.
long_description = file: README.rst
author = Mark Sandstrom
author_email = mark@deliciouslynerdy.com
maintainer = Raphaël Barrois
maintainer_email = raphael.barrois+fboy@polytechnique.org
url = https://github.com/FactoryBoy/factory_boy
keywords = factory_boy, factory, fixtures
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
packages = factory
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires = Faker>=0.7.0

[zest.releaser]
; semver-style versions
version-levels = 3

[distutils]
index-servers = pypi

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
