[metadata]
name = factory_boy
version = 3.3.4.dev0
description = A versatile test fixtures replacement based on thoughtbot's factory_bot for Ruby.
long_description = file: README.rst
# https://docutils.sourceforge.io/FAQ.html#what-s-the-official-mime-type-for-restructuredtext-data
long_description_content_type = text/x-rst
author = Mark Sandstrom
author_email = mark@deliciouslynerdy.com
maintainer = Raphaël Barrois
maintainer_email = raphael.barrois+fboy@polytechnique.org
url = https://github.com/FactoryBoy/factory_boy
keywords = factory_boy, factory, fixtures
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = factory
python_requires = >=3.8
install_requires =
    Faker>=0.7.0

[options.extras_require]
dev =
    coverage
    Django
    flake8
    isort
    mypy
    Pillow
    SQLAlchemy
    mongoengine
    mongomock
    wheel>=0.32.0
    tox
    zest.releaser[recommended]
doc =
    Sphinx
    sphinx_rtd_theme
    sphinxcontrib-spelling

[options.package_data]
factory =
    py.typed

[bdist_wheel]
universal = 1

[zest.releaser]
; semver-style versions
version-levels = 3

[distutils]
index-servers = pypi

[flake8]
ignore =
    # Ignore "and" at start of line.
    W503
    # Ignore "do not assign a lambda expression, use a def".
    E731
max-line-length = 120

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[coverage:run]
dynamic_context = test_function

[coverage:report]
include=
    factory/*.py
    tests/*.py

[coverage:html]
show_contexts = True
